added generate button styling

--- a/Improvement/index.html
+++ b/Improvement/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Echo Learn</title>
 
-    <link rel="stylesheet" href="../static/css/style-new.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -57,16 +57,19 @@
           <div class="mic-button">
             <i class="fa-solid fa-microphone"></i>
           </div>
+          <div class="btn">
+            <button class = "button-89" id="generate_sample">Generate</button>
+          </div>
         </div>
+        
       </div>
     </main>
-    <div>
-      <button id="generate_sample">Generate</button>
-    </div>
+
 
 
     <!-- JS for any dynamic behavior -->
 
-    <script src="../static/javascript/callbacks.js"></script>
+    
   </body>
+  <script src="script.js"></script>
 </html>
